--- a/resistron.css
+++ b/resistron.css
@@ -30,29 +30,29 @@ border-radius: 15px;
     flex-wrap: wrap;
 }
 
-.firstColor{
-    background-color: black;
+.firstRing{
+    background-color: rgb(63, 122, 8);
     width: 7%;
     height: 100%;
     margin-left: 20px;
 }
-.secondColor{
+.secondRing{
     background-color: blue;
     width: 7%;
     height: 100%;
     margin-left: 60px;
 }
-.thirdColor{
+.thirdRing{
     background-color: red;
     width: 7%;
     height: 100%;
     margin-left: 200px;
 }
-.lastColor{
+.lastRing{
     background-color: orange;
     width: 7%;
     height: 100%;
-    margin-left: 100px;
+    margin-left: 40px;
 }
 
 .chooseColor{
